# rlbot425

./: .gitignore  pyproject.toml
rlbot425/agents/: base_agent.py
rlbot425/agents/standalone/: standalone_bot.py
rlbot425/convert/: __init__.py  config.py  pyconv.py
rlbot425/matchcomms/: client.py
rlbot425/matchconfig/: match_config.py
rlbot425/messages/flat/: QuickChatSelection.py  __init__.py
rlbot425/parsing/: match_settings_config_parser.py
rlbot425/utils/: bot_runner.py  game_state_util.py
rlbot425/utils/rendering/: rendering_manager.py
rlbot425/utils/structures/: ball_prediction_struct.py  game_data_struct.py
tests/: convert.py
tests/v4-example/: bot.py
tests/v4-example/util/: ball_prediction_analysis.py  boost_pad_tracker.py  drive.py  sequence.py  spikes.py  vec.py
