[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlbot425"
requires-python = ">= 3.11"
dependencies = [
    "rlbot>=2.0.0.beta",
    "toml~=0.10.2",
]
readme = "README.md"
version = "0.1.0"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
